jilles      2006/01/02 12:28:05 UTC	(20060102-4417)
  Log:
  Rework a bit to be more flexible. Should be no
  functional changes.
  

  Changes:	Modified:
  +68 -159	trunk/modules/operserv/specs.c (File Modified) 


jilles      2006/01/02 12:00:58 UTC	(20060102-4415)
  Log:
  ChanServ CLOSE: Use MC_INHABIT instead of rolling our own.
  

  Changes:	Modified:
  +10 -100	trunk/modules/chanserv/close.c (File Modified) 
  +2 -1		trunk/modules/chanserv/main.c (File Modified) 


pfish       2006/01/02 11:33:51 UTC	(20060102-4413)
  Log:
  OperServ SPECS: Show when a user can bypass registration limits (PRIV_REG_NOLIMIT)
  

  Changes:	Modified:
  +9 -1		trunk/modules/operserv/specs.c (File Modified) 


jilles      2006/01/02 11:28:01 UTC	(20060102-4411)
  Log:
  Change /ns link, now only allows the user's current nick
  to be linked (to the nick they are identified to).
  
  PRIV_REG_NOLIMIT now exempts from the per-email limit.
  

  Changes:	Modified:
  +7 -5		trunk/help/nickserv/link (File Modified) 
  +10 -27	trunk/modules/nickserv/link.c (File Modified) 


nenolod     2006/01/02 11:27:23 UTC	(20060102-4409)
  Log:
  Extend our copyrights to 2006.
  

  Changes:	Modified:
  +1 -1		trunk/COPYING (File Modified) 
  +1 -1		trunk/doc/LICENSE (File Modified) 


jilles      2006/01/02 11:00:37 UTC	(20060102-4407)
  Log:
  Send wallops and snoop notice if someone registers an account/nick
  matching an operator{} block (thereby gaining services operator
  privileges).
  

  Changes:	Modified:
  +5 -0		trunk/modules/nickserv/register.c (File Modified) 
  +5 -0		trunk/modules/userserv/register.c (File Modified) 


jilles      2006/01/01 22:23:09 UTC	(20060101-4405)
  Log:
  Make it compile most of this stuff with 'make all'.
  

  Changes:	Modified:
  +16 -0	trunk/contrib/Makefile.in (File Modified) 


jilles      2006/01/01 22:21:45 UTC	(20060101-4403)
  Log:
  Add nickserv enforcement to contrib. (Code is too ugly for base, also